--- a/3_condicionales/index.html
+++ b/3_condicionales/index.html
@@ -6,8 +6,8 @@
     <title>Acceso a Discoteca</title>
 </head>
 <body>
-     <h1>Bienvenid@ a la Discoteca</h1>
-  <p>Ingresa tu nombre y edad cuando se te solicite.</p>
+     <h1>Bienvenid@ </h1>
+  <p>Ingresa los datos cuando se te solicite.</p>
 
     <script src="app2.js"></script>
 </body>
